--- a/.github/workflows/azure-kubernetes-service-helm.yml
+++ b/.github/workflows/azure-kubernetes-service-helm.yml
@@ -44,8 +44,8 @@ env:
   CONTAINER_NAME: "order-service"
   RESOURCE_GROUP: "cln-rg-01"
   CLUSTER_NAME: "cln-aks-01"
-  CHART_PATH: "/charts/aks-store-demo"
-  CHART_OVERRIDE_PATH: "/charts/aks-store-demo"
+  CHART_PATH: "/charts/aks-store-demo/"
+  CHART_OVERRIDE_PATH: "/charts/aks-store-demo/values.yaml"
 
 jobs:
   buildImage:
